--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="vida">HP 1200</p>
                 </div>
                 <div class="container-imagem">
-                    <img class="imagem-pokemon" src="./src/imagens/mewtwo.png" alt="mewtwo">
+                    <img class="imagem-pokemon1" src="./src/imagens/mewtwo.png" alt="mewtwo">
                 </div>
                 <div class="descricao">
                     <h3 class="tittle">Descrição</h3>
