--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                     <p class="vida">HP 1200</p>
                 </div>
                 <div class="container-imagem">
-                    <img class="imagem-pokemon1" src="./src/imagens/mewtwo.png" alt="mewtwo">
+                    <img class="imagem-pokemon" src="./src/imagens/mewtwo.png" alt="mewtwo">
                 </div>
                 <div class="descricao">
                     <h3 class="tittle">Descrição</h3>
-                    <p class="texto1">Mewtwo foi criado geneticamente em um laboratório, sendo um clone do misterioso antigo Pokémon Mew. É uma criatura com uma postura humanóide, mas tem algumas características felinas.<p>
+                    <p class="texto">Mewtwo foi criado geneticamente em um laboratório, sendo um clone do misterioso antigo Pokémon Mew. É uma criatura com uma postura humanóide, mas tem algumas características felinas.<p>
                 </div>
             </li>
         </ul>
